fixed some small html/css layout problems

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,10 +27,6 @@ form.form-delete {
 	align-items: flex-end;
 }
 
-.answer-form-size-quick-fix {
-	min-width: 35em;
-}
-
 [v-cloak] {
 	display: none;
 }
